...
    }
}

extension LiseHealthStatus {
    var label: String {
        switch self {
        case .unknown: "Données insuffisantes"
        case .ok: "Opérationnel"
        case .slow: "Lent"
        case .verySlow: "Très lent"
        }
    }

...
